# Anki-Tools

./: .gitignore  LICENSE  main.py  pyproject.toml
src/anki_tools/: __init__.py  add_words.py  card_builder.py  cli.py  prioritize.py  word_entry.py
src/anki_tools/client/: ankiconnect.py  apkg.py  base.py
src/anki_tools/models/: css.py  italian_vocabulary.py  italian_vocabulary_blank.py
tests/: conftest.py  test_ankiconnect.py  test_card_builder.py  test_cli_helpers.py  test_prioritize.py  test_word_entry.py
